--- a/roles/services/haproxy/tasks/main.yaml
+++ b/roles/services/haproxy/tasks/main.yaml
@@ -100,6 +100,7 @@
     state: started
     detach: yes
     restart: true
+    recreate: true
     volume: "{{ volumes }}"
     restart_policy: always
     sysctl:
