--- a/roles/services/mealie/tasks/main.yaml
+++ b/roles/services/mealie/tasks/main.yaml
@@ -101,6 +101,7 @@
     state: started
     detach: yes
     restart: true
+    recreate: true
     volume: "{{ volumes }}"
     env: "{{ env }}"
     restart_policy: always
