--- a/roles/services/homarr/tasks/main.yaml
+++ b/roles/services/homarr/tasks/main.yaml
@@ -34,6 +34,7 @@
     state: started
     detach: yes
     restart: true
+    recreate: true
     volume: "{{ volumes + ['/var/run/podman/podman.sock:/var/run/docker.sock'] }}"
     env: "{{ env }}"
     restart_policy: always
