--- a/roles/services/jackett/tasks/main.yaml
+++ b/roles/services/jackett/tasks/main.yaml
@@ -34,6 +34,7 @@
     state: started
     detach: yes
     restart: true
+    recreate: true
     volume: "{{ volumes }}"
     env: "{{ env }}"
     restart_policy: always
