--- a/roles/services/jellyfin/tasks/main.yaml
+++ b/roles/services/jellyfin/tasks/main.yaml
@@ -61,6 +61,7 @@
     name: "{{ user }}"
     state: started
     restart: true
+    recreate: true
     detach: yes
     volume: "{{ volumes }}"
     env: "{{ env }}"
