--- a/roles/services/sonarr/tasks/main.yaml
+++ b/roles/services/sonarr/tasks/main.yaml
@@ -33,6 +33,7 @@
     name: "{{ user }}"
     state: started
     restart: true
+    recreate: true
     detach: yes
     volume: "{{ volumes }}"
     env: "{{ env }}"
