--- a/roles/services/transmission/tasks/main.yaml
+++ b/roles/services/transmission/tasks/main.yaml
@@ -35,6 +35,7 @@
     state: started
     detach: yes
     restart: true
+    recreate: true
     volume: "{{ volumes }}"
     env: "{{ env }}"
     restart_policy: always
