--- a/roles/services/wireguard/tasks/main.yaml
+++ b/roles/services/wireguard/tasks/main.yaml
@@ -1,22 +1,3 @@
-- name: "Create {{ user }} user"
-  ansible.builtin.user:
-    name: "{{ user }}"
-    comment: "{{ user }}"
-    uid: "{{ uid }}"
-    create_home: false
-    password: '!'
-    shell: "/sbin/nologin"
-    groups: "podman"
-    append: yes
-
-- name: "Change {{ user }}'s home directory permissions"
-  file:
-    path: "/home/{{ user }}"
-    owner: "{{ user }}"
-    group: "{{ user }}"
-    mode: '0770'
-    state: directory
-
 - name: "Copy backups"
   ansible.posix.synchronize:
     src: "{{ backup_path }}"
@@ -26,12 +7,12 @@
   ignore_errors: true
 
 - name: "Change permissions of restored directories"
-  command: 'find {{ path }} -type d -exec chown {{ user }}:{{ user }} {} \; -exec chmod 0770 {} \;'
+  command: 'find {{ path }} -type d -exec chown root:root {} \; -exec chmod 0770 {} \;'
   when: restore is truthy
   ignore_errors: true
 
 - name: "Change permissions of restored files"
-  command: 'find {{ path }} -type f -exec chown {{ user }}:{{ user }} {} \; -exec chmod 0660 {} \;'
+  command: 'find {{ path }} -type f -exec chown root:root {} \; -exec chmod 0660 {} \;'
   when: restore is truthy
   ignore_errors: true
 
@@ -39,8 +20,8 @@
   file:
     path: "{{ item | split(':') | first }}"
     state: directory
-    group: "{{ user }}"
-    owner: "{{ user }}"
+    group: root
+    owner: root
     recurse: yes
     mode: '0770'
   with_items: "{{ volumes }}"
@@ -58,27 +39,14 @@
     line: "{{ item }}"
   with_items: ["ip_tables", "iptable_filter"]
 
-- name: "Add user to subuid and subgid"
-  import_tasks: subuid_or_subgid.yaml
-  vars:
-    username: "{{ user }}"
-
 - name: "Run podman system migrate"
   command: "podman system migrate"
-  become: true
-  become_user: "{{ user }}"
-  become_method: su
-  become_flags: '-s /bin/ash'
 
 - name: "Create {{ user }}'s pod"
   containers.podman.podman_pod:
     name: "{{ user }}_pod"
     state: started
     ports: "{{ ports }}"
-  become: true
-  become_user: "{{ user }}"
-  become_method: su
-  become_flags: '-s /bin/ash'
 
 - name: "Run {{ user }}'s container"
   containers.podman.podman_container:
@@ -88,6 +56,7 @@
     state: started
     detach: yes
     restart: true
+    recreate: true
     volume: "{{ volumes }}"
     env: "{{ env }}"
     restart_policy: always
@@ -100,17 +69,9 @@
       net.ipv4.conf.all.src_valid_mark: 1,
       net.ipv4.ip_forward: 1
       }
-  become: true
-  become_user: "{{ user }}"
-  become_method: su
-  become_flags: '-s /bin/ash'
 
 - name: "Create {{ user }} yaml file"
   ansible.builtin.shell : "podman generate kube {{ user }}_pod > {{ path }}/{{ user }}_kubefile.yaml" 
-  become: true
-  become_user: "{{ user }}"
-  become_method: su
-  become_flags: '-s /bin/ash'
 
 - name: "Rename the pod correctly in the yaml file"
   ansible.builtin.replace:
@@ -122,7 +83,7 @@
   file:
     path: "{{ path }}/{{ user }}_kubefile.yaml"
     owner: root
-    group: "{{ user }}"
+    group: root
     mode: '0664'
     state: file
 
